...
          style={styles.crashButton}
          onPress={() => setShouldCrash(true)}
        >
          <Text style={styles.crashButtonText}>💣</Text>
        </TouchableOpacity>
        <TouchableOpacity
          testID="grid-outline-toggle"
          style={[
            styles.crashButton,
            showGridOutline && styles.gridButtonActive,
          ]}
          onPress={onToggleGridOutline}
        >
...
